--- a/site.yaml
+++ b/site.yaml
@@ -45,7 +45,7 @@ meta:
   title: "Minds and Machines"
   author: "Theodore X. Pak et al."
   charset: utf-8
-  description: "Documentation for the 'Wumpus Arduino Redux'."
+  description: "This couse is an introduction to the philosophy of mind. Students will debate and write papers on the nature of mind, free will, personal identity, consciousness, artificial intelligence, and animal cognition."
   ga_tracking_code: UA-XXXXXXXXX-X
 sorter:
   index:
@@ -59,7 +59,9 @@ grouper:
     groups:
       - name: info
         description: Course Information
-      - name: assignment-wumpus
-        description: Wumpus World Assignment
-      - name: doc
+      - name: final-projects
+        description: Final Projects
+      - name: doc-war
         description: WAR API Documentation
+      - name: doc-c4
+        description: Connect 4 Moderator Usage
