--- a/info.yaml
+++ b/info.yaml
@@ -1,3 +1,3 @@
-author: Theodore X. Pak
-description: Wumpus World
+author: Theodore X. Pak et al.
+description: Minds and Machines at Rensselaer Polytechnic Institute
 version: 0.1
